# School-management

./: COMPLETE_IMPROVEMENTS_SUMMARY.md  COMPLETE_UI_IMPROVEMENTS_SUMMARY.md  DESIGN_SPECIFICATION.md  MOBILE_DASHBOARD_README.md  POSTGRES_RENDER_SETUP.md  PROJECT_COMPLETION_REPORT.md  QUICK_START_GUIDE.md  UI_IMPROVEMENTS_COMPLETE.md  UI_IMPROVEMENTS_DOCUMENTATION_INDEX.md  UI_IMPROVEMENTS_README.md  app.py  debug_admin.py  main.py  render.yaml  school_management.db  test_password.py  wsgi.py
School-Management/: .env.example  .replit  DEPLOYMENT_CHECKLIST.md  DEPLOY_READY.md  IMPROVEMENTS_COMPLETE.txt  IMPROVEMENTS_SUMMARY.md  OPTIMIZATION_GUIDE.md  Procfile  QUICK_UI_START.md  RENDER_DEPLOYMENT_GUIDE.md  TESTING_README.md  UI_ENHANCEMENTS_GUIDE.md  UI_IMPROVEMENTS_GUIDE.md  UI_IMPROVEMENTS_SUMMARY.md  UI_VISUAL_REFERENCE.md  app.py  check_admin.py  create_admin.py  demo.html  diagnose_login.py  fix_admin_final.py  install_test_dependencies.py  list_admins.py  local_db.json  log.txt  main.py  mock_replit.py  monitor_performance.py  pyproject.toml  quick_health_check.py  render.yaml  requirements.txt  reset_admin.py  run_all_tests.py  run_app.py  run_local.py  school_management.db  seed_db.py  setup_db.py  test_admin_login.py  (+9 more)
School-Management/templates/: add_exam.html  add_student.html  attendance.html  base_mobile.html  base_new.html  class_schedule.html  classes.html  dashboard-enhanced.html  dashboard-modern.html  dashboard_mobile.html  exam_results.html  exams.html  fee_report.html  login-enhanced.html  login.html  login_modern.html  reports.html  settings.html  (+3 more)
(+41 files in other folders)
