[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11.0,<3.12"
flask = "^3.0.0"
gunicorn = "^21.2.0"
bcrypt = "^4.3.0"
flask-migrate = "^4.1.0"
flask-login = "^0.6.3"
twilio = "^9.6.5"
python-dotenv = "^1.1.1"
reportlab = "^4.4.2"
openpyxl = "^3.1.5"
flask-sqlalchemy = "^3.1.1"
flask-wtf = "^1.2.2"
werkzeug = "^3.1.3"
wtforms = "^3.2.1"
email-validator = "^2.2.0"
flask-mail = "^0.10.0"
requests = "^2.32.4"
replit = "^4.1.2"
pywhatkit = "^5.4"
psutil = "^7.0.0"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"